2014-05-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1763: ppc64 JIT doesn't support class data sharing
	* Makefile.am:
	(add-archive): Skip on ppc64.
	(add-archive-debug): Likewise.
	(add-archive-boot): Likewise.
	* NEWS: Updated.

2014-05-09  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1762: Undefined references when building with NSS 3.16.1
	* NEWS: Updated.
	* acinclude.m4:
	(IT_ENABLE_SUNEC): For NSS >= 3.16.1, add -lfreebl
	to SUNEC_LIBS, not SUNEC_CFLAGS, and use NSS_LIBS as
	the base, not NSS_SOFTOKN_LIBS.

2014-05-09  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(BUILD_VERSION): Bump to b15.
	(CORBA_CHANGESET): Update to icedtea-2.6pre04 tag.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to pre03.
	* hotspot.map: Bump default to icedtea-2.6pre04 tag.
	* patches/boot/ecj-autoboxing.patch: Regenerated.
	* patches/boot/ecj-diamond.patch: Regenerated and
	cases in ScriptManager, JDK13Services and ServiceDelegator
	added.
	* patches/boot/ecj-trywithresources.patch: Regenerated.

2014-05-01  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* AUTHORS: Add Tiago.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Expand ppc64le to its
	own block to avoid potential future collisions.
	(IT_ENABLE_ZERO_BUILD): Likewise.

2014-05-01  Tiago Sturmer Daitx  <tdaitx@linux.vnet.ibm.com>

	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Support ppc64le.
	(IT_ENABLE_ZERO_BUILD): Likewise and use correct
	host_cpu value for ppc64.

2014-05-01  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1756: Bootstrap with IcedTea broken
	* Makefile.am:
	(ICEDTEA_BOOT_PATCHES): Only apply ant-javac.patch